Kawa/_build/default/kawaparser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On VAR shift to state 1
-- On var_decl shift to state 9
-- On program shift to state 11
-- On list(var_decl) shift to state 12
## Reductions:
-- On MAIN CLASS
--   reduce production list(var_decl) ->

State 1:
## Known stack suffix:
## VAR
## LR(1) items:
var_decl -> VAR . types IDENT SEMI [ WHILE VAR TRUE THIS SUB RETURN PRINT NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS ]
## Transitions:
-- On VOID shift to state 2
-- On T_INT shift to state 3
-- On IDENT shift to state 4
-- On BOOL shift to state 5
-- On types shift to state 6
## Reductions:

State 2:
## Known stack suffix:
## VOID
## LR(1) items:
types -> VOID . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production types -> VOID

State 3:
## Known stack suffix:
## T_INT
## LR(1) items:
types -> T_INT . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production types -> T_INT

State 4:
## Known stack suffix:
## IDENT
## LR(1) items:
types -> IDENT . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production types -> IDENT

State 5:
## Known stack suffix:
## BOOL
## LR(1) items:
types -> BOOL . [ IDENT ]
## Transitions:
## Reductions:
-- On IDENT
--   reduce production types -> BOOL

State 6:
## Known stack suffix:
## VAR types
## LR(1) items:
var_decl -> VAR types . IDENT SEMI [ WHILE VAR TRUE THIS SUB RETURN PRINT NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS ]
## Transitions:
-- On IDENT shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## VAR types IDENT
## LR(1) items:
var_decl -> VAR types IDENT . SEMI [ WHILE VAR TRUE THIS SUB RETURN PRINT NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS ]
## Transitions:
-- On SEMI shift to state 8
## Reductions:

State 8:
## Known stack suffix:
## VAR types IDENT SEMI
## LR(1) items:
var_decl -> VAR types IDENT SEMI . [ WHILE VAR TRUE THIS SUB RETURN PRINT NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS ]
## Transitions:
## Reductions:
-- On WHILE VAR TRUE THIS SUB RETURN PRINT NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS
--   reduce production var_decl -> VAR types IDENT SEMI

State 9:
## Known stack suffix:
## var_decl
## LR(1) items:
list(var_decl) -> var_decl . list(var_decl) [ WHILE TRUE THIS SUB RETURN PRINT NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS ]
## Transitions:
-- On VAR shift to state 1
-- On var_decl shift to state 9
-- On list(var_decl) shift to state 10
## Reductions:
-- On WHILE TRUE THIS SUB RETURN PRINT NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS
--   reduce production list(var_decl) ->

State 10:
## Known stack suffix:
## var_decl list(var_decl)
## LR(1) items:
list(var_decl) -> var_decl list(var_decl) . [ WHILE TRUE THIS SUB RETURN PRINT NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS ]
## Transitions:
## Reductions:
-- On WHILE TRUE THIS SUB RETURN PRINT NOT NEW MAIN LPAR INT IF IDENT FALSE END CLASS
--   reduce production list(var_decl) -> var_decl list(var_decl)

State 11:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 12:
## Known stack suffix:
## list(var_decl)
## LR(1) items:
program -> list(var_decl) . list(class_def) MAIN BEGIN list(instruction) END EOF [ # ]
## Transitions:
-- On CLASS shift to state 13
-- On list(class_def) shift to state 140
-- On class_def shift to state 146
## Reductions:
-- On MAIN
--   reduce production list(class_def) ->

State 13:
## Known stack suffix:
## CLASS
## LR(1) items:
class_def -> CLASS . IDENT BEGIN list(attr_decl) list(method_def) END [ MAIN CLASS ]
class_def -> CLASS . IDENT EXTENDS IDENT BEGIN list(attr_decl) list(method_def) END [ MAIN CLASS ]
## Transitions:
-- On IDENT shift to state 14
## Reductions:

State 14:
## Known stack suffix:
## CLASS IDENT
## LR(1) items:
class_def -> CLASS IDENT . BEGIN list(attr_decl) list(method_def) END [ MAIN CLASS ]
class_def -> CLASS IDENT . EXTENDS IDENT BEGIN list(attr_decl) list(method_def) END [ MAIN CLASS ]
## Transitions:
-- On EXTENDS shift to state 15
-- On BEGIN shift to state 136
## Reductions:

State 15:
## Known stack suffix:
## CLASS IDENT EXTENDS
## LR(1) items:
class_def -> CLASS IDENT EXTENDS . IDENT BEGIN list(attr_decl) list(method_def) END [ MAIN CLASS ]
## Transitions:
-- On IDENT shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## CLASS IDENT EXTENDS IDENT
## LR(1) items:
class_def -> CLASS IDENT EXTENDS IDENT . BEGIN list(attr_decl) list(method_def) END [ MAIN CLASS ]
## Transitions:
-- On BEGIN shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## CLASS IDENT EXTENDS IDENT BEGIN
## LR(1) items:
class_def -> CLASS IDENT EXTENDS IDENT BEGIN . list(attr_decl) list(method_def) END [ MAIN CLASS ]
## Transitions:
-- On ATTRIBUTE shift to state 18
-- On list(attr_decl) shift to state 22
-- On attr_decl shift to state 134
## Reductions:
-- On METHOD END
--   reduce production list(attr_decl) ->

State 18:
## Known stack suffix:
## ATTRIBUTE
## LR(1) items:
attr_decl -> ATTRIBUTE . types IDENT SEMI [ METHOD END ATTRIBUTE ]
## Transitions:
-- On VOID shift to state 2
-- On T_INT shift to state 3
-- On IDENT shift to state 4
-- On BOOL shift to state 5
-- On types shift to state 19
## Reductions:

State 19:
## Known stack suffix:
## ATTRIBUTE types
## LR(1) items:
attr_decl -> ATTRIBUTE types . IDENT SEMI [ METHOD END ATTRIBUTE ]
## Transitions:
-- On IDENT shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## ATTRIBUTE types IDENT
## LR(1) items:
attr_decl -> ATTRIBUTE types IDENT . SEMI [ METHOD END ATTRIBUTE ]
## Transitions:
-- On SEMI shift to state 21
## Reductions:

State 21:
## Known stack suffix:
## ATTRIBUTE types IDENT SEMI
## LR(1) items:
attr_decl -> ATTRIBUTE types IDENT SEMI . [ METHOD END ATTRIBUTE ]
## Transitions:
## Reductions:
-- On METHOD END ATTRIBUTE
--   reduce production attr_decl -> ATTRIBUTE types IDENT SEMI

State 22:
## Known stack suffix:
## CLASS IDENT EXTENDS IDENT BEGIN list(attr_decl)
## LR(1) items:
class_def -> CLASS IDENT EXTENDS IDENT BEGIN list(attr_decl) . list(method_def) END [ MAIN CLASS ]
## Transitions:
-- On METHOD shift to state 23
-- On method_def shift to state 130
-- On list(method_def) shift to state 132
## Reductions:
-- On END
--   reduce production list(method_def) ->

State 23:
## Known stack suffix:
## METHOD
## LR(1) items:
method_def -> METHOD . types IDENT LPAR loption(separated_nonempty_list(COMMA,param)) RPAR BEGIN list(var_decl) list(instruction) END [ METHOD END ]
## Transitions:
-- On VOID shift to state 2
-- On T_INT shift to state 3
-- On IDENT shift to state 4
-- On BOOL shift to state 5
-- On types shift to state 24
## Reductions:

State 24:
## Known stack suffix:
## METHOD types
## LR(1) items:
method_def -> METHOD types . IDENT LPAR loption(separated_nonempty_list(COMMA,param)) RPAR BEGIN list(var_decl) list(instruction) END [ METHOD END ]
## Transitions:
-- On IDENT shift to state 25
## Reductions:

State 25:
## Known stack suffix:
## METHOD types IDENT
## LR(1) items:
method_def -> METHOD types IDENT . LPAR loption(separated_nonempty_list(COMMA,param)) RPAR BEGIN list(var_decl) list(instruction) END [ METHOD END ]
## Transitions:
-- On LPAR shift to state 26
## Reductions:

State 26:
## Known stack suffix:
## METHOD types IDENT LPAR
## LR(1) items:
method_def -> METHOD types IDENT LPAR . loption(separated_nonempty_list(COMMA,param)) RPAR BEGIN list(var_decl) list(instruction) END [ METHOD END ]
## Transitions:
-- On VOID shift to state 2
-- On T_INT shift to state 3
-- On IDENT shift to state 4
-- On BOOL shift to state 5
-- On types shift to state 27
-- On separated_nonempty_list(COMMA,param) shift to state 29
-- On param shift to state 30
-- On loption(separated_nonempty_list(COMMA,param)) shift to state 33
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,param)) ->

State 27:
## Known stack suffix:
## types
## LR(1) items:
param -> types . IDENT [ RPAR COMMA ]
## Transitions:
-- On IDENT shift to state 28
## Reductions:

State 28:
## Known stack suffix:
## types IDENT
## LR(1) items:
param -> types IDENT . [ RPAR COMMA ]
## Transitions:
## Reductions:
-- On RPAR COMMA
--   reduce production param -> types IDENT

State 29:
## Known stack suffix:
## separated_nonempty_list(COMMA,param)
## LR(1) items:
loption(separated_nonempty_list(COMMA,param)) -> separated_nonempty_list(COMMA,param) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,param)) -> separated_nonempty_list(COMMA,param)

State 30:
## Known stack suffix:
## param
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param . [ RPAR ]
separated_nonempty_list(COMMA,param) -> param . COMMA separated_nonempty_list(COMMA,param) [ RPAR ]
## Transitions:
-- On COMMA shift to state 31
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,param) -> param

State 31:
## Known stack suffix:
## param COMMA
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param COMMA . separated_nonempty_list(COMMA,param) [ RPAR ]
## Transitions:
-- On VOID shift to state 2
-- On T_INT shift to state 3
-- On IDENT shift to state 4
-- On BOOL shift to state 5
-- On types shift to state 27
-- On separated_nonempty_list(COMMA,param) shift to state 32
-- On param shift to state 30
## Reductions:

State 32:
## Known stack suffix:
## param COMMA separated_nonempty_list(COMMA,param)
## LR(1) items:
separated_nonempty_list(COMMA,param) -> param COMMA separated_nonempty_list(COMMA,param) . [ RPAR ]
## Transitions:
## Reductions:
-- On RPAR
--   reduce production separated_nonempty_list(COMMA,param) -> param COMMA separated_nonempty_list(COMMA,param)

State 33:
## Known stack suffix:
## METHOD types IDENT LPAR loption(separated_nonempty_list(COMMA,param))
## LR(1) items:
method_def -> METHOD types IDENT LPAR loption(separated_nonempty_list(COMMA,param)) . RPAR BEGIN list(var_decl) list(instruction) END [ METHOD END ]
## Transitions:
-- On RPAR shift to state 34
## Reductions:

State 34:
## Known stack suffix:
## METHOD types IDENT LPAR loption(separated_nonempty_list(COMMA,param)) RPAR
## LR(1) items:
method_def -> METHOD types IDENT LPAR loption(separated_nonempty_list(COMMA,param)) RPAR . BEGIN list(var_decl) list(instruction) END [ METHOD END ]
## Transitions:
-- On BEGIN shift to state 35
## Reductions:

State 35:
## Known stack suffix:
## METHOD types IDENT LPAR loption(separated_nonempty_list(COMMA,param)) RPAR BEGIN
## LR(1) items:
method_def -> METHOD types IDENT LPAR loption(separated_nonempty_list(COMMA,param)) RPAR BEGIN . list(var_decl) list(instruction) END [ METHOD END ]
## Transitions:
-- On VAR shift to state 1
-- On var_decl shift to state 9
-- On list(var_decl) shift to state 36
## Reductions:
-- On WHILE TRUE THIS SUB RETURN PRINT NOT NEW LPAR INT IF IDENT FALSE END
--   reduce production list(var_decl) ->

State 36:
## Known stack suffix:
## METHOD types IDENT LPAR loption(separated_nonempty_list(COMMA,param)) RPAR BEGIN list(var_decl)
## LR(1) items:
method_def -> METHOD types IDENT LPAR loption(separated_nonempty_list(COMMA,param)) RPAR BEGIN list(var_decl) . list(instruction) END [ METHOD END ]
## Transitions:
-- On WHILE shift to state 37
-- On TRUE shift to state 39
-- On THIS shift to state 40
-- On SUB shift to state 41
-- On RETURN shift to state 99
-- On PRINT shift to state 102
-- On NOT shift to state 42
-- On NEW shift to state 43
-- On LPAR shift to state 46
-- On INT shift to state 47
-- On IF shift to state 107
-- On IDENT shift to state 48
-- On FALSE shift to state 49
-- On memoire shift to state 112
-- On list(instruction) shift to state 128
-- On instruction shift to state 122
-- On expression shift to state 124
## Reductions:
-- On END
--   reduce production list(instruction) ->

State 37:
## Known stack suffix:
## WHILE
## LR(1) items:
instruction -> WHILE . LPAR expression RPAR BEGIN list(instruction) END [ WHILE TRUE THIS SUB RETURN PRINT NOT NEW LPAR INT IF IDENT FALSE END ]
## Transitions:
-- On LPAR shift to state 38
## Reductions:

State 38:
## Known stack suffix:
## WHILE LPAR
## LR(1) items:
instruction -> WHILE LPAR . expression RPAR BEGIN list(instruction) END [ WHILE TRUE THIS SUB RETURN PRINT NOT NEW LPAR INT IF IDENT FALSE END ]
## Transitions:
-- On TRUE shift to state 39
-- On THIS shift to state 40
-- On SUB shift to state 41
-- On NOT shift to state 42
-- On NEW shift to state 43
-- On LPAR shift to state 46
-- On INT shift to state 47
-- On IDENT shift to state 48
-- On FALSE shift to state 49
-- On memoire shift to state 50
-- On expression shift to state 96
## Reductions:

State 39:
## Known stack suffix:
## TRUE
## LR(1) items:
expression -> TRUE . [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
## Reductions:
-- On SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD
--   reduce production expression -> TRUE

State 40:
## Known stack suffix:
## THIS
## LR(1) items:
expression -> THIS . [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
## Reductions:
-- On SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD
--   reduce production expression -> THIS

State 41:
## Known stack suffix:
## SUB
## LR(1) items:
expression -> SUB . expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
-- On TRUE shift to state 39
-- On THIS shift to state 40
-- On SUB shift to state 41
-- On NOT shift to state 42
-- On NEW shift to state 43
-- On LPAR shift to state 46
-- On INT shift to state 47
-- On IDENT shift to state 48
-- On FALSE shift to state 49
-- On memoire shift to state 50
-- On expression shift to state 95
## Reductions:

State 42:
## Known stack suffix:
## NOT
## LR(1) items:
expression -> NOT . expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
-- On TRUE shift to state 39
-- On THIS shift to state 40
-- On SUB shift to state 41
-- On NOT shift to state 42
-- On NEW shift to state 43
-- On LPAR shift to state 46
-- On INT shift to state 47
-- On IDENT shift to state 48
-- On FALSE shift to state 49
-- On memoire shift to state 50
-- On expression shift to state 94
## Reductions:

State 43:
## Known stack suffix:
## NEW
## LR(1) items:
expression -> NEW . IDENT [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> NEW . IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
-- On IDENT shift to state 44
## Reductions:

State 44:
## Known stack suffix:
## NEW IDENT
## LR(1) items:
expression -> NEW IDENT . [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> NEW IDENT . LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
-- On LPAR shift to state 45
## Reductions:
-- On SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD
--   reduce production expression -> NEW IDENT

State 45:
## Known stack suffix:
## NEW IDENT LPAR
## LR(1) items:
expression -> NEW IDENT LPAR . loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
-- On TRUE shift to state 39
-- On THIS shift to state 40
-- On SUB shift to state 41
-- On NOT shift to state 42
-- On NEW shift to state 43
-- On LPAR shift to state 46
-- On INT shift to state 47
-- On IDENT shift to state 48
-- On FALSE shift to state 49
-- On separated_nonempty_list(COMMA,expression) shift to state 59
-- On memoire shift to state 50
-- On loption(separated_nonempty_list(COMMA,expression)) shift to state 92
-- On expression shift to state 62
## Reductions:
-- On RPAR
--   reduce production loption(separated_nonempty_list(COMMA,expression)) ->

State 46:
## Known stack suffix:
## LPAR
## LR(1) items:
expression -> LPAR . expression RPAR [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
-- On TRUE shift to state 39
-- On THIS shift to state 40
-- On SUB shift to state 41
-- On NOT shift to state 42
-- On NEW shift to state 43
-- On LPAR shift to state 46
-- On INT shift to state 47
-- On IDENT shift to state 48
-- On FALSE shift to state 49
-- On memoire shift to state 50
-- On expression shift to state 51
## Reductions:

State 47:
## Known stack suffix:
## INT
## LR(1) items:
expression -> INT . [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
## Reductions:
-- On SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD
--   reduce production expression -> INT

State 48:
## Known stack suffix:
## IDENT
## LR(1) items:
memoire -> IDENT . [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AS AND ADD ]
## Transitions:
## Reductions:
-- On SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AS AND ADD
--   reduce production memoire -> IDENT

State 49:
## Known stack suffix:
## FALSE
## LR(1) items:
expression -> FALSE . [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
## Reductions:
-- On SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD
--   reduce production expression -> FALSE

State 50:
## Known stack suffix:
## memoire
## LR(1) items:
expression -> memoire . [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
## Reductions:
-- On SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD
--   reduce production expression -> memoire

State 51:
## Known stack suffix:
## LPAR expression
## LR(1) items:
expression -> expression . ADD expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . SUB expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . MUL expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . DIV expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . REM expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . EQ expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . NEQ expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . LT expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . LE expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . GT expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . GE expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . AND expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . OR expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . EQS expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> expression . NEQS expression [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
expression -> LPAR expression . RPAR [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
memoire -> expression . DOT IDENT [ SUB RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV AND ADD ]
## Transitions:
-- On SUB shift to state 52
-- On RPAR shift to state 91
-- On REM shift to state 54
-- On OR shift to state 63
-- On NEQS shift to state 73
-- On NEQ shift to state 75
-- On MUL shift to state 65
-- On LT shift to state 77
-- On LE shift to state 79
-- On GT shift to state 81
-- On GE shift to state 83
-- On EQS shift to state 85
-- On EQ shift to state 87
-- On DOT shift to state 56
-- On DIV shift to state 67
-- On AND shift to state 69
-- On ADD shift to state 71
## Reductions:

State 52:
## Known stack suffix:
## expression SUB
## LR(1) items:
expression -> expression SUB . expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
-- On TRUE shift to state 39
-- On THIS shift to state 40
-- On SUB shift to state 41
-- On NOT shift to state 42
-- On NEW shift to state 43
-- On LPAR shift to state 46
-- On INT shift to state 47
-- On IDENT shift to state 48
-- On FALSE shift to state 49
-- On memoire shift to state 50
-- On expression shift to state 53
## Reductions:

State 53:
## Known stack suffix:
## expression SUB expression
## LR(1) items:
expression -> expression . ADD expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . SUB expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression SUB expression . [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . MUL expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . DIV expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . REM expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . EQ expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . NEQ expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . LT expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . LE expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . GT expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . GE expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . AND expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . OR expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . EQS expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . NEQS expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
expression -> expression . DOT IDENT LPAR loption(separated_nonempty_list(COMMA,expression)) RPAR [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
memoire -> expression . DOT IDENT [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
-- On REM shift to state 54
-- On MUL shift to state 65
-- On DOT shift to state 56
-- On DIV shift to state 67
## Reductions:
-- On SUB SEMI RPAR OR NEQS NEQ LT LE GT GE EQS EQ COMMA AND ADD
--   reduce production expression -> expression SUB expression

State 54:
## Known stack suffix:
## expression REM
## LR(1) items:
expression -> expression REM . expression [ SUB SEMI RPAR REM OR NEQS NEQ MUL LT LE GT GE EQS EQ DOT DIV COMMA AND ADD ]
## Transitions:
-- On TRUE shift to state 39
-- On THIS shift to state 40
-- On SUB shift to state 41
-- On NOT shift to state 42
-- On NEW shift to state 43
-- On LPAR shift to state 46
-- On INT shift to state 47
-- On IDENT shift to state 48
-- On FALSE shift to state 49
-- On memoire shift to state 50
-- On expression shift to state 55
## Reductions:
